Update(config): 修改与注释配置文件

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -6,4 +6,4 @@ node:                         # 有层次的配置
   loompa: 10                  # 简单值
   zippity: ${node.loompa}     # 插入值
   do: "oompa ${node.loompa}"  # 插入字符串
-  waldo: ???                  # Missing value, must be populated prior to access
+  waldo: ???                  # 缺失值，使用之前必须先通过参数赋值
